--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 			render () {
 				const name = this.props.name
 				return (
-					<h1 id="Title" onClick={this.handleClick}>
+					<h1 id="Title" onClick={this.handleClick
+					}>
 						Hola {name} {this.state.count}
 					</h1>
 				)
