--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 	<script type="text/babel">
 		// Creando un componente por medio de una funcion
 		function Hola(props) {
-			const name = props.name
-
 			// Creando elemento h en el DOM con JSX, sin utilizar React.DOM.h1({id: 'Title'}, `Hola ${name}`)
 			return (
-				<h1 id="Title">
-					Hola {name}
+				<h1 id="Title" onClick={props.onClick}>
+					Hola {props.name} {props.count}
 				</h1>
 			)
 		}
@@ -57,10 +55,11 @@
 			render () {
 				const name = this.props.name
 				return (
-					<h1 id="Title" onClick={this.handleClick
-					}>
-						Hola {name} {this.state.count}
-					</h1>
+					<Hola
+						name={this.props.name}
+						count={this.state.count}
+						onClick={this.handleClick}
+					/>
 				)
 			}
 		}
